# fast-format-x

./: .fast-format-x.yaml  .ffx.yaml  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  alpha-plan.md  install.sh  release.toml
.cursor/plans/: ffx_priority_fixes_0ab05cfe.plan.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: CNAME  fast-format-x.yaml  index.html  install.sh  site.webmanifest  style.css
src/: config.rs  exec.rs  git.rs  main.rs  matcher.rs
tests/: integration_test.rs
