[package]
name = "ffx"
version = "0.1.19"
edition = "2021"
description = "One command to auto-format every changed file. All formatters run in parallel."
license = "MIT"
repository = "https://github.com/BrianSigafoos/fast-format-x"
homepage = "https://github.com/BrianSigafoos/fast-format-x"
readme = "README.md"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI
cargo-dist-version = "0.28.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[[bin]]
name = "ffx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
globset = "0.4"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
which = "7.0"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
strip = true

